package com.ecommerce.pedido.models;

import com.fasterxml.jackson.annotation.JsonBackReference;
import com.ecommerce.pedido.models.enums.TamanhoPorcao;
import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.ManyToAny;

import java.math.BigDecimal;

@Entity
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@EqualsAndHashCode
public class ItemPedido {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @EqualsAndHashCode.Include
    private Long id;

    private Integer quantidade;
    private BigDecimal precoUnitario;

    @Enumerated(EnumType.STRING)
    private TamanhoPorcao tamanho = TamanhoPorcao.INTEIRA;

    @JsonBackReference
    @ManyToOne
    @JoinColumn(name = "pedido_id")
    private Pedido pedido;

    @ManyToOne
    @JoinColumn(name = "produto_id")
    private Produto produto;

}
