package com.ecommerce.pedido.models.enums;

public enum StatusComanda {
    ABERTA,
    FECHADA,
    AGUARDANDO_PIX,
    PAGA
}
