package com.ecommerce.pedido.models.enums;

public enum StatusPedido {
    CONFIRMADO,
    AGUARDANDO_CONFIRMACAO,
    EM_PREPARACAO,
    A_CAMINHO,
    ENTREGUE,
    CANCELADO,
    ENTREGADOR_ROUBADO;
}
