package com.ecommerce.pedido.models.enums;

public enum TamanhoPorcao {
    INTEIRA,
    MEIA
}
